Fix footer overlapping stats

--- a/apps/website/app/style.css
+++ b/apps/website/app/style.css
@@ -1270,12 +1270,6 @@ p {
   background-size: cover;
 }
 
-@media only screen and (min-width: 1921px) {
-  .footer-area::before {
-    height: 1120px;
-  }
-}
-
 #particles-2 {
   position: absolute;
   top: 0;
